--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,8 +1,16 @@
 <html>
-<head>
-    <title>GINCRUD</title>
-</head>
-<body>
-    <h1>{{.hello}}</h1>
-</body>
+  <head>
+    <title>{{ .title }}</title>
+  </head>
+  <body>
+    <h1>{{ .hello }}</h1>
+    <form action="/" method="post">
+      <input type="text" name="text"></input>
+    </form>
+    <ul>
+      {{ range $index, $task := .tasks }}
+        <li>{{ $index }}: {{ $task.Text }} </li>
+      {{ end }}
+    </ul>
+  </body>
 </html>
